# Synapsa-Local-LLM-Agent

./: .gitignore  .pre-commit-config.yaml  AuditorV2.py  Audytor.py  Audytor_Hybrid.py  Audytor_Ultimate.py  BENCHMARKS.md  ConstructionDemo.py  Constructor.py  Czysciciel.py  Dockerfile  INSTALACJA.bat  Inicjator_Projektu.py  Instructor.py  Launcher_Systemu.py  Obserwator.py  PORADNIK_INSTALACJI.md  ProjectMemory.py  RAPORT_GAP_ANALYSIS.md  README.md  README_PL.md  Sensei.py  Skaner.py  Skaner_Ekspercki.py  Start.py  _sanitize.py  agent.py  api.py  app_budowlanka.py  app_ksiegowosc.py  config.py  docker-compose.yml  instrukcja_synapsa.md  koder.py  main.py  napraw_gpu.py  pyproject.toml  requirements.txt  start_synapsa.bat  synapsa_config.json  (+7 more)
.github/workflows/: ci.yml
agents/: auditor.py  base_agent.py
configs/: quantization.yaml
core/: engine.py
docs/adr/: 0001-model-selection-qwen.md  0002-vector-db-chroma.md
docs/internal/: DOKUMENTACJA_TECHNICZNA.md  FIX_LIBRARY.py  QUICKSTART.txt  START_BUDOWLANKA.bat  START_KSIEGOWOSC.bat  napraw_triton_crash.py  sprawdz_modele.py
examples/agentic_workflows/: AuditorHybrid.py  Audytor_Ultimate.py  ExpertScanner.py  Nauczyciel.py  Sensei.py
examples/reports/: DEMO_RESULT.md  RAPORT_EKSPERCKI.md  RAPORT_EWALUACJI.md  RAPORT_GOTOWOSCI.md  RAPORT_HARDCORE.md  RAPORT_SENIORA.md  RAPORT_WIEDZY.md
synapsa/: __init__.py  _triton_dummy.py  compat.py  engine.py  hardware.py  install_helper.py
synapsa/agents/: __init__.py  accountant_agent.py  construction_agent.py  office_agent.py  zlecenie_processor.py
synapsa/knowledge/: vat_norms.json
tests/: _predemo_1_calc.py  _predemo_2_ui.py  _predemo_3_http.py  _predemo_4_audit.py  assess_ai.py  check_knowledge.py  debug_chroma.py  debug_engine.py  diagnose_env.py  eval_rag.py  generate_test_invoices.py  predemo_check.py  simulate_audit.py  test_accountant.py  test_ai_with_invoices.py  test_budowlanka_v5.py  test_business_logic.py  test_e2e_scenarios.py  test_full_flow.py  test_full_verification.py  test_norms.py  test_ui_upload_silent.py  test_unsloth.py  test_zlecenie_pipeline.py  verify.py  verify_demo.py  verify_fix.py  verify_pivot.py
triton_patches/: README.md  triton_dummy_hybrid.py  triton_dummy_koder.py  triton_dummy_windows.py
