[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "synapsa"
version = "1.0.0"
description = "Autonomous, self-improving AI Engineering ecosystem for local deployment"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Synapsa Team"},
]
keywords = ["ai", "llm", "agents", "rag", "local-inference", "quantization"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "streamlit>=1.32",
    "psutil>=5.9",
    "requests>=2.31",
    "colorama>=0.4.6",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
gpu = [
    "torch>=2.2",
    "transformers>=4.40",
    "peft>=0.10",
    "bitsandbytes>=0.43",
    "accelerate>=0.27",
]
rag = [
    "chromadb>=0.4",
    "sentence-transformers>=2.2",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "black>=24.0",
    "isort>=5.13",
    "ruff>=0.3",
    "mypy>=1.8",
    "pre-commit>=3.6",
]
all = ["synapsa[gpu,rag,dev]"]

[tool.setuptools.packages.find]
include = ["synapsa*"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 100

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
