[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "synapsa"
version = "1.1.0"
description = "Autonomous, self-improving AI Engineering ecosystem for local deployment"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
authors = [
    {name = "Synapsa Team"},
]
keywords = ["ai", "llm", "agents", "rag", "local-inference", "quantization"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "streamlit>=1.42",
    "psutil>=5.9",
    "requests>=2.31",
    "colorama>=0.4.6",
    "python-dotenv>=1.0",
    "pymupdf>=1.24",         # PDF/Image OCR — kluczowe dla audytu faktur
    "openpyxl>=3.1",         # Czytanie plikow Excel
    "reportlab>=4.0",        # Generowanie PDF raportow
]

[project.optional-dependencies]
gpu = [
    "torch>=2.6",
    "transformers>=4.49",
    "peft>=0.15",
    "bitsandbytes>=0.45",
    "accelerate>=0.34",
    "flash-attn>=2.7",       # 20-40% szybsza inferencja na Ampere+
]
rag = [
    "chromadb>=0.6",
    "sentence-transformers>=3.0",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "black>=24.0",
    "isort>=5.13",
    "ruff>=0.9",
    "mypy>=1.10",
    "pre-commit>=3.6",
]
all = ["synapsa[gpu,rag,dev]"]

[tool.setuptools.packages.find]
include = ["synapsa*"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 100

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
